Some alignement fixes for searchbar

--- a/app/screens/TaskBox/taskbox.styl
+++ b/app/screens/TaskBox/taskbox.styl
@@ -25,12 +25,18 @@
         input
             color white
             border 1px solid #ccc
+            background-color black
+            display block
             width 100%
             height 40px
             line-height 40px
             font-size 1.15em
             text-indent 5px
             -webkit-appearance none
+            margin 0
+            padding 0
+            padding-top 1px
+            padding-bottom 1px
             border-radius 0
 
         .groupFilterBox
